--- a/app/globals.css
+++ b/app/globals.css
@@ -81,21 +81,29 @@
 .auth {
   @apply w-full h-lvh flex items-center justify-center bg-purple-1 dark:bg-background;
 }
+.container-class{
+  @apply container mx-auto pt-20 pb-10;
+}
+.page {
+  @apply w-full min-h-svh h-full bg-purple-1 dark:bg-background;
+}
 .content {
   @apply bg-white dark:bg-black w-1/3 mx-auto py-7 px-4 max-sm:w-5/6 max-lg:w-2/3 max-xl:w-1/2 flex flex-col items-center justify-center gap-6 rounded-3xl;
 }
 .logo{
   @apply relative w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20;
 }
-
+.form {
+  @apply flex flex-col items-center gap-2 sm:gap-5;
+}
 .input {
   @apply flex items-center justify-between px-5 py-3 rounded-2xl cursor-pointer shadow-2xl dark:border-b;
 }
 .input-field {
-  @apply w-[300px] max-sm:w-full bg-transparent outline-none;
+  @apply w-[300px] max-sm:w-full text-sm bg-transparent outline-none placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50;
 }
 .button {
-  @apply w-full px-5 py-3 mt-5 mb-7 rounded-xl cursor-pointer bg-blue-1 hover:bg-blue-2 text-white text-[18px] font-bold focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50;
+  @apply w-full px-5 py-3 mt-5 mb-7 rounded-xl cursor-pointer bg-blue-1 hover:bg-blue-2 text-white text-[18px] font-bold focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 disabled:cursor-not-allowed disabled:opacity-50 ;
 }
 .link {
   @apply text-base font-medium hover:text-blue-700 transition-colors duration-100;
