--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@
   @apply w-full min-h-svh h-full bg-purple-1 dark:bg-background;
 }
 .content {
-  @apply bg-white dark:bg-black w-1/3 mx-auto py-7 px-4 max-sm:w-5/6 max-lg:w-2/3 max-xl:w-1/2 flex flex-col items-center justify-center gap-6 rounded-3xl;
+  @apply bg-white dark:bg-black w-1/3 mx-auto py-7 px-4 max-sm:w-5/6 max-lg:w-2/3 max-xl:w-1/2 flex flex-col items-center justify-center gap-6 rounded-2xl border;
 }
 .logo{
   @apply relative w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20;
@@ -97,7 +97,7 @@
   @apply flex flex-col items-center gap-2 sm:gap-5;
 }
 .input {
-  @apply flex items-center justify-between px-5 py-3 rounded-2xl cursor-pointer shadow-2xl dark:border-b;
+  @apply flex items-center justify-between px-5 py-3 rounded-sm cursor-pointer shadow-sm dark:border-b;
 }
 .input-field {
   @apply w-[300px] max-sm:w-full text-sm bg-transparent outline-none placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50;
