--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,102 +9,146 @@
 
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
- 
+
     --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
- 
+
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
- 
+
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
- 
+
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
- 
+
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
- 
+
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
- 
+
     --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
- 
+
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
- 
+
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
- 
+
     --accent: 0 0% 14.9%;
     --accent-foreground: 0 0% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
- 
+
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
-.blackwhite{
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+    border-radius: 2px;
+  }
+}
+
+.blackwhite {
   @apply bg-white dark:bg-black
 }
+
 .auth {
   @apply w-full h-lvh flex items-center justify-center bg-purple-1 dark:bg-background;
 }
-.container-class{
+
+.container-class {
   @apply container mx-auto pt-20 pb-10;
 }
+
+.chat-container {
+  @apply container mx-auto pt-20 pb-10 flex justify-between gap-5 max-lg:gap-8;
+}
+
 .page {
   @apply w-full min-h-svh h-full bg-purple-1 dark:bg-background;
 }
+
 .content {
   @apply bg-white dark:bg-black w-1/3 mx-auto py-7 px-4 max-sm:w-5/6 max-lg:w-2/3 max-xl:w-1/2 flex flex-col items-center justify-center gap-6 rounded-2xl border;
 }
-.logo{
+
+.logo {
   @apply relative w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20;
 }
+
 .form {
   @apply flex flex-col items-center gap-2 sm:gap-5;
 }
+
 .input {
   @apply flex items-center justify-between px-5 py-3 rounded-sm cursor-pointer shadow-sm dark:border-b;
 }
+
 .input-field {
   @apply w-[300px] max-sm:w-full text-sm bg-transparent outline-none placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50;
 }
+
 .button {
-  @apply w-full px-5 py-3 mt-5 mb-7 rounded-xl cursor-pointer bg-blue-1 hover:bg-blue-2 text-white text-[18px] font-bold focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 disabled:cursor-not-allowed disabled:opacity-50 ;
+  @apply w-full px-5 py-3 mt-5 rounded-lg cursor-pointer bg-blue-1 hover:bg-blue-2 text-white text-[18px] font-bold focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 focus:ring-offset-slate-50 disabled:cursor-not-allowed disabled:opacity-50;
 }
+
 .link {
   @apply text-base font-medium hover:text-blue-700 transition-colors duration-100;
 }
+
+/* Chat Page Styles */
+.chat-list{
+  @apply h-[88svh] md:h-[82svh] col-span-1 flex flex-col items-center gap-2 sm:gap-4 py-4 px-2;
+}
+.input-search {
+  @apply w-full px-4 py-2 rounded-lg bg-white dark:bg-black outline-none text-sm placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50;
+}
+.chats{
+  @apply flex-grow w-full grid grid-cols-1 gap-4 p-2 bg-white dark:bg-black rounded-lg overflow-y-scroll custom-scrollbar;
+}
+
+.contact-bar {
+  @apply flex gap-7 items-start max-lg:flex-col;
+}
+.contact-list{
+  @apply h-[88svh] md:h-[82svh] flex flex-col items-center gap-2 sm:gap-4 py-4 px-2;
+}
+
+
+
